tests/script/negative/undefinedness/collections_2.s
int undef;

transition initial -> terminal;

@initial
m() {
  foo = {undef};
  transitionTo(@terminal)
}
